--- a/frontend/src/pages/booklist/BookList.css
+++ b/frontend/src/pages/booklist/BookList.css
@@ -244,24 +244,29 @@
   align-items: stretch;
   gap: 8px;
   border-radius: var(--sds-size-radius-200, 8px);
-  border: 1px solid var(--sds-color-border-default-default, #d9d9d9);
+  border: 1px solid var(--sds-color-border-default-default, #ffffff);
   background: var(--sds-color-background-default-default, #fff);
   overflow: hidden;
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .book-image {
-  display: flex;
   width: 100%;
-  height: 206px; /* 이미지 높이는 그대로 유지 */
+  height: 206px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: var(--sds-size-space-400, 16px);
+  background-color: #ffffff; /* No Image 배경 */
+  border-radius: 8px;
 }
 
+
 .book-image img {
-  width: 148px;
+  width: 100%;
   height: 206px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .book-info {
